<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/base_red"
        android:gravity="center"
        android:text="@string/main_fill_in_room_id"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="match_parent"
        android:layout_height="146.1dp"
        android:layout_marginTop="61dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/ic_logo" />

    <EditText
        android:id="@+id/et_room_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_edit_height"
        android:layout_marginStart="@dimen/main_margin_side"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="@dimen/main_margin_side"
        android:autofillHints="@string/main_hint_room_id"
        android:hint="@string/main_hint_room_id"
        android:inputType="number"
        android:maxLength="11"
        android:textColorHint="@color/edit_hint" />

    <ImageView
        android:id="@+id/img_clear_input"
        android:layout_width="@dimen/main_edit_height"
        android:layout_height="@dimen/main_edit_height"
        android:contentDescription="@string/clear_input"
        android:padding="13dp"
        android:src="@mipmap/ic_input_clear"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_btn_join_height"
        android:layout_marginStart="@dimen/main_margin_side"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/main_margin_side"
        android:background="@drawable/shape_main_btn_join"
        android:text="@string/join_room"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>