<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/meeting_background"
    android:orientation="vertical"
    tools:context=".MeetingActivity">

    <View
        android:id="@+id/v_function_container"
        android:layout_width="match_parent"
        android:layout_height="54dp" />

    <ImageButton
        android:id="@+id/ib_audio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/meeting_background"
        android:contentDescription="@string/leave_room"
        android:src="@drawable/selector_meeting_mute" />

    <ImageButton
        android:id="@+id/ib_leave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/meeting_background"
        android:contentDescription="@string/leave_room"
        android:src="@drawable/selector_meeting_leave" />

    <ImageButton
        android:id="@+id/ib_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/meeting_background"
        android:contentDescription="@string/leave_room"
        android:src="@drawable/selector_meeting_close_video" />


    <com.netease.lava.nertc.sdk.video.NERtcVideoView
        android:id="@+id/vv_remote_user"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/tv_wait_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_wait_hint"
        android:textColor="@color/white" />

    <View
        android:id="@+id/v_local_user_bg"
        android:layout_width="90dp"
        android:layout_height="160dp"
        android:layout_margin="12dp"
        android:background="@color/white" />

    <com.netease.lava.nertc.sdk.video.NERtcVideoView
        android:id="@+id/vv_local_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp" />


    <ImageView
        android:id="@+id/img_camera_flip"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/switch_camera"
        android:src="@mipmap/ic_camera_flip" />

</LinearLayout>